add improvement section

--- a/navigation/Navigation - Collect Yellow Bananas in a Square World.ipynb
+++ b/navigation/Navigation - Collect Yellow Bananas in a Square World.ipynb
@@ -573,6 +573,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Improvements\n",
+    "\n",
+    "I noticed that when the agent's visual field is filled with blue bananas, it would shift quickly between the turn left and turn right actions, and ends up being stuck in one spot. The agent needs to learn how to break the fixation of state. Collecting a few blue banana in exchange for a different state is much better than getting stuck and collectiong nothing!\n",
+    "\n",
+    "I also want to try out the following techniques, \n",
+    "\n",
+    "- **prioritized experience replay** (to sample experience with probability proportional to the TD-error)\n",
+    "- **double DQNs** (to avoid over-estimate action value early on)\n",
+    "    - when calculating the TD target, instead of using $\\max_aQ_{target}(S_{t+1}, a \\in A(S_{t+1}); \\theta')$, use $Q_{target}(S_{t+1}, a=\\arg\\max_aQ_{pred}(S_{t+1}, a \\in A(S_{t+1}); \\theta); \\theta')$\n",
+    "- and **dueling network** (to separaet action value function into state value and advantage value) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
