add default hyper-parameters

--- a/continuous_control/Report.ipynb
+++ b/continuous_control/Report.ipynb
@@ -199,7 +199,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training"
+    "# Training\n",
+    "\n",
+    "Below are the default settings for the hyper-parameters\n",
+    "\n",
+    "| hyper-parameter  | value  |\n",
+    "|---|---|\n",
+    "| actor optimizer learning rate  |  3e-4 | \n",
+    "| critic optimizer learning rate | 3e-4 |\n",
+    "| replay buffer size | int(1e6) |\n",
+    "| gamma (discount rate) | 0.99 |\n",
+    "| tau (target soft update factor) | 0.005 |\n",
+    "| action noise | 0.2 |\n",
+    "| noise clip | 0.5 |\n",
+    "| (policy and target) update frequency | 2 |"
    ]
   },
   {
